# colstodian

./: CLAUDE.md  Cargo.toml  changes.md  clippy.toml
benches/: color_conversions.rs
examples/: basic_usage.rs  color_math.rs  game_graphics_workflow.rs
src/: approx_impls.rs  custom.rs  lib.rs
src/details/: color.rs  component_structs.rs  encodings.rs  linear_spaces.rs  reprs.rs  traits.rs
src/details/descriptions/: srgb_f32.md  srgb_u8.md  srgba_f32.md  srgba_u8.md
tests/: conversions.rs  custom_color_spaces.rs  math_operations.rs  perceptual_operations.rs  property_tests.rs  trait_implementations.rs
